--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
   },
   "scripts": {
     "start": "ts-node server.ts",
-    "build": "cd social-network && yarn build",
-    "heroku-postbuild": "yarn run build",
+    "build": "cd client && yarn run build",
+    "install-client": "cd client && yarn install",
+    "heroku-postbuild": "yarn run install-client && yarn run build",
     "dev": "ts-node server.ts",
     "nodemon": "nodemon"
   }
